--- a/pet-clinic-web/src/main/resources/templates/owner/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owner/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th = "http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Owners List</title>
 </head>
 <body>
 <h1 th:text="'List of Owners'"> Owner lists...</h1>
+<table>
+    <thead>
+    <tr>
+        <th>Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+    </thead>
+    </tr>
+    <tbody>
+    <tr th:each="owner : ${owners}">
+        <td th:text="${owner.id}">1</td>
+        <td th:text="${owner.firstName}">First Name</td>
+        <td th:text="${owner.lstName}">Last Name</td>
+    </tr>
+    </tbody>
+</table>
 
 </body>
 </html>
