--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -7,5 +7,22 @@
 <body>
 <h1 th:text="'List of Vets'"> Vet lists...</h1>
 
+
+<table>
+    <thead>
+    <tr>
+        <th>Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+    </thead>
+    </tr>
+    <tbody>
+    <tr th:each="vet : ${vets}">
+        <td th:text="${vet.id}">1</td>
+        <td th:text="${vet.firstName}">First Name</td>
+        <td th:text="${vet.lstName}">Last Name</td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
