--- a/pet-clinic-web/src/main/resources/templates/owner/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owner/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns:th = "https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
     <meta charset="UTF-8">
     <title>Owners List</title>
 </head>
 <body>
 <h1 th:text="'List of Owners'"> Owner lists...</h1>
-<table>
+<table id="owners" class="table table-striped">
     <thead>
     <tr>
-        <th>Id</th>
-        <th>First Name</th>
-        <th>Last Name</th>
+        <th style="width: 150px;">Id</th>
+        <th style="width: 150px;">First Name</th>
+        <th style="width: 150px;">Last Name</th>
     </thead>
     </tr>
     <tbody>
