--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th = "https://www.thymeleaf.org">
+<html lang="en" xmlns:th = "https://www.thymeleaf.org"  th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 <head>
     <meta charset="UTF-8">
     <title>Vets List</title>
@@ -8,7 +8,7 @@
 <h1 th:text="'List of Vets'"> Vet lists...</h1>
 
 
-<table>
+<table id="vets" class="table table-striped">
     <thead>
     <tr>
         <th>Id</th>
