Updated base Entity.  Closes #31

--- a/pet-clinic-web/src/main/resources/templates/owner/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owner/index.html
@@ -18,7 +18,7 @@
     <tr th:each="owner : ${owners}">
         <td th:text="${owner.id}">1</td>
         <td th:text="${owner.firstName}">First Name</td>
-        <td th:text="${owner.lstName}">Last Name</td>
+        <td th:text="${owner.lastName}">Last Name</td>
     </tr>
     </tbody>
 </table>
