--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -20,7 +20,7 @@
     <tr th:each="vet : ${vets}">
         <td th:text="${vet.id}">1</td>
         <td th:text="${vet.firstName}">First Name</td>
-        <td th:text="${vet.lstName}">Last Name</td>
+        <td th:text="${vet.lastName}">Last Name</td>
     </tr>
     </tbody>
 </table>
